--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,44 @@
-/ChipsLibrary/gen
-/ChipsLibrary/bin
-/ChipsSample/bin
-/ChipsSample/gen
+# Android generated
+bin
+gen
+lint.xml
+
+# Eclipse
+.project
+.classpath
+.settings
+.checkstyle
+
+# IntelliJ IDEA
+.idea
+*.iml
+*.ipr
+*.iws
+classes
+gen-external-apklibs
+
+# Maven
+target
+release.properties
+pom.xml.*
+
+# Ant
+ant.properties
+local.properties
+proguard.cfg
+proguard-project.txt
+
+# Other
+.DS_Store
+dist/
+tmp
+path
+
+# Gradle
+.gradle
+/build
+/out
+
+# Crashlytics
+crashlytics-build.properties
+com_crashlytics_export_strings.xml
